# university-manager-tui-rust

./: Cargo.toml  LICENSE  README.md
data/: students.json
src/: data_manager.rs  main.rs  modal.rs  models.rs  ui.rs  widgets.rs
